# v4l2loopback_cpp

./: CMakeLists.txt  v4l2sinkcapture.cpp
